--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Dencentraland 2017</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Dencentraland 2017 - By Prahaladbelavadi</p>
       </div>
       <!-- /.container -->
     </footer>
