--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
                     <img src="./img/3LPbF1wufpLzRU5pBNutivadVXyK9jwtkP.png" class="fluid img-responsive" alt="">
                 </a>
         <p>This wallet is secured by <a href="https://twitter.com/AdamDraper" target="blank">Adam Draper</a>, <a href="https://twitter.com/masonic_tweets" target="blank">Mason Borda</a>, and <a href="https://twitter.com/bitcoinmom" target="blank">Brooke Mallers</a>.</p>
+        <p>
+            <a href="https://twitter.com/cryptograffiti/status/930933869066338304">
+                White Paper
+            </a>
+        </p>
 	  <p>Have an idea for an ITO? Please submit to the ITO review board <a href="https://goo.gl/forms/KT62bEUzFSxQdkFY2" target="blank">here</a></p>
   </div>
   <br>
